# setupvault

./: .gitignore  Cargo.toml  LICENSE  README.md
.github/: FUNDING.yml
crates/sv-cli/: Cargo.toml
crates/sv-cli/src/: lib.rs  main.rs
crates/sv-cli/src/snapshots/: sv_cli__tests__cli_help_snapshot.snap  sv_cli__tests__cli_help_snapshot.snap.new
crates/sv-core/: Cargo.toml
crates/sv-core/src/: lib.rs
crates/sv-detectors/: Cargo.toml
crates/sv-detectors/src/: lib.rs
crates/sv-fs/: Cargo.toml
crates/sv-fs/src/: lib.rs
crates/sv-tui/: Cargo.toml
crates/sv-tui/src/: lib.rs  main.rs
crates/sv-tui/src/snapshots/: sv_tui__tests__render_snapshot.snap
crates/sv-utils/: Cargo.toml
crates/sv-utils/src/: lib.rs
docs/: PRD.md  index.html
docs/architecture/: cli-surface.md  data-storage.md  detectors.md  system-overview.md  tui-architecture.md  tui-surface.md
docs/architecture/adr/: adr-001-ratatui.md  adr-002-markdown-vault.md
docs/design/: ux-principles.md
docs/guides/: contributor-guide.md  demo-seed.md  homebrew-release.md  user-manual.md
packaging/homebrew/: setupvault.rb
scripts/: demo_seed.py
