[package]
name = "sv-cli"
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"

[dependencies]
anyhow = { workspace = true }
clap = { workspace = true }
sv-core = { path = "../sv-core" }
sv-detectors = { path = "../sv-detectors" }
sv-fs = { path = "../sv-fs" }
sv-utils = { path = "../sv-utils" }
sv-tui = { path = "../sv-tui" }
chrono = { workspace = true }
uuid = { workspace = true }
tokio = { workspace = true }

[dev-dependencies]
insta = { workspace = true }
