[package]
name = "sv-detectors"
version = "0.1.0"
edition = "2021"
license = "MIT"
authors = ["Tuğcan ÖNBAŞ <tgcn@tugcanonbas.com>"]

[dependencies]
sv-core = { path = "../sv-core" }
sv-utils = { path = "../sv-utils" }
chrono = { workspace = true }
dirs = { workspace = true }
tokio = { workspace = true }
uuid = { workspace = true }
