[package]
name = "sv-fs"
version = "0.1.0"
edition = "2021"
license = "MIT"
authors = ["Tuğcan ÖNBAŞ <tgcn@tugcanonbas.com>"]

[dependencies]
sv-core = { path = "../sv-core" }
sv-utils = { path = "../sv-utils" }
chrono = { workspace = true }
dirs = { workspace = true }
serde = { workspace = true }
serde_yaml = { workspace = true }
thiserror = { workspace = true }
uuid = { workspace = true }
walkdir = { workspace = true }

[dev-dependencies]
tempfile = { workspace = true }
